[package]
name = "time-zone-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
chrono = "0.4.38"
chrono-tz = "0.9.0"
lazy_static = "1.4.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = "1.38.0"
tzf-rs = "0.4.8"
